--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "chart.js": "^4.4.9",
     "element-plus": "^2.9.8",
+    "marked": "^15.0.11",
     "openai": "^4.96.0",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
