--- a/src/mcp/.env
+++ b/src/mcp/.env
@@ -1,3 +1,6 @@
 API_KEY=sk-bc5b78ce6cff4344ba6abd675c685c0d
 BASE_URL=https://api.deepseek.com
+
+OPENWEATHER_API_BASE =https://api.openweathermap.org/data/2.5
+OPENWEATHER_API_KEY =3eb1148a1d6c909afa7179cd74b4713c
 MODEL_NAME=deepseek-chat
