--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,7 @@ dependencies = [
     "openai>=1.76.0",
     "openai-agents>=0.0.13",
     "python-dotenv>=1.1.0",
+    "quart>=0.20.0",
+    "quart-cors>=0.8.0",
     "requests>=2.32.3",
 ]
