--- a/src/mcp/.env
+++ b/src/mcp/.env
@@ -6,6 +6,12 @@ OPENWEATHER_API_BASE =https://api.openweathermap.org/data/2.5
 OPENWEATHER_API_KEY =3eb1148a1d6c909afa7179cd74b4713c
 MODEL_NAME=deepseek-chat
 
-# Puppeteer配置
-USE_PUPPETEER=true
-PUPPETEER_LAUNCH_OPTIONS={"headless": false, "defaultViewport": {"width": 1920, "height": 1080}}
+# playwright
+USE_PLAYWRIGHT=true
+PLAYWRIGHT_LAUNCH_OPTIONS={"headless": true, "slowMo": 50}
+
+DB_HOST =172.23.19.252
+DB_PORT =3306
+DB_USER =newman
+DB_PASSWORD =password
+DB_NAME =learning
