--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "aiomysql>=0.2.0",
+    "cryptography>=44.0.2",
     "flask>=3.1.0",
     "flask-cors>=5.0.1",
     "httpx>=0.28.1",
