--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "openai>=1.76.0",
     "openai-agents>=0.0.13",
     "pandas>=2.2.3",
+    "problems>=0.0.2",
     "pymysql>=1.1.1",
     "python-dotenv>=1.1.0",
     "quart>=0.20.0",
